--- a/pom.xml
+++ b/pom.xml
@@ -1,17 +1,16 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>Com.Demo.App</groupId>
   <artifactId>applications</artifactId>
   <packaging>war</packaging>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>0.0.1</version>
   <name>applications Maven Webapp</name>
   <url>http://maven.apache.org</url>
   <scm>
 		<connection>scm:git:git@github.com:breddyprasad/applications.git</connection>
 		<url>scm:git:git@github.com:breddyprasad/applications.git</url>
 		<developerConnection>scm:git:git@github.com:breddyprasad/applications.git</developerConnection>
-		<tag>HEAD</tag>
+		<tag>applications-0.0.1</tag>
 	</scm>
 
 	<distributionManagement>
