--- a/pom.xml
+++ b/pom.xml
@@ -3,14 +3,14 @@
   <groupId>Com.Demo.App</groupId>
   <artifactId>applications</artifactId>
   <packaging>war</packaging>
-  <version>0.0.1</version>
+  <version>0.0.2-SNAPSHOT</version>
   <name>applications Maven Webapp</name>
   <url>http://maven.apache.org</url>
   <scm>
 		<connection>scm:git:git@github.com:breddyprasad/applications.git</connection>
 		<url>scm:git:git@github.com:breddyprasad/applications.git</url>
 		<developerConnection>scm:git:git@github.com:breddyprasad/applications.git</developerConnection>
-		<tag>applications-0.0.1</tag>
+		<tag>HEAD</tag>
 	</scm>
 
 	<distributionManagement>
